# telegram-bot

./: README.md
.github/workflows/: rust-clippy.yml
lib/: Cargo.toml
lib/examples/: features.rs  send.rs  simple.rs  tracing.rs
lib/src/: api.rs  errors.rs  stream.rs
lib/src/connector/: hyper.rs
lib/src/util/: messages.rs
raw/: Cargo.toml
raw/src/requests/: get_updates.rs
raw/src/requests/_base/: errors.rs  mod.rs
raw/src/requests/_base/request_types/: detached.rs  json.rs  multipart.rs
raw/src/requests/_base/response_types/: json.rs
raw/src/types/: message.rs  refs.rs  reply_markup.rs
