[package]
name = "telegram-bot"
version = "0.9.0"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>", "Fedor Gogolev <knsd@knsd.net>", "Gustavo Aguiar <gustavo.h.o.aguiar@gmail.com>"]
edition = "2018"

description = "A library for creating Telegram bots"

documentation = "https://docs.rs/telegram-bot/"
repository = "https://github.com/telegram-rs/telegram-bot"
readme = "../README.md"

keywords = ["telegram", "bot", "chat", "api"]
categories = ["api-bindings", "asynchronous"]
license = "MIT"

[features]
openssl = ["hyper-tls"]
rustls = ["hyper-rustls"]
default = ["openssl"]

[dependencies]
bytes = "1.0.1"
thiserror = "1.0.63"
tokio = { version = "1.2", features = ["fs", "rt"]}

tracing = "0.1.23"
tracing-futures = "0.2"
multipart-2021 = { version = "0.19.0", default-features = false, features = ["client"] }

telegram-bot-raw = { version = "0.9.0", path = "../raw" }

hyper = { version = "0.14", features = [ "client", "http1", "http2" ] }
hyper-tls = { version = "0.5.0", optional = true  }
futures = "0.3"
hyper-rustls = { version = "0.25.0", optional = true, features = [ "http2", "rustls-native-certs" ] }

[dev-dependencies]
tracing-subscriber = { version = "0.3.18", features = [ "env-filter" ] }
tokio = { version = "1.2", features = ["macros", "time", "fs", "rt-multi-thread"] }
